# clawdio

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  generate-version-tag.yml  release-to-npm.yml
examples/: package-lock.json  package.json
examples/src/: App.tsx
examples/src/components/Bitcrusher/: Bitcrusher.tsx  BitcrusherExample.tsx
examples/src/components/SamplePad/: SamplePad.tsx
examples/src/components/Waveform/: StaticWaveform.tsx  Waveform.tsx
examples/src/store/: audio.ts
modules/: Cargo.toml  README.MD
modules/bitcrusher/: Cargo.toml  README.md
modules/bitcrusher/src/: lib.rs
modules/bitcrusher/tests/: general.rs
modules/moog/: Cargo.toml  README.md
modules/moog/src/: lib.rs
modules/moog/tests/: general.rs
modules/pink-noise/: Cargo.toml  README.md
modules/pink-noise/src/: lib.rs
modules/pink-noise/tests/: general.rs
modules/shared/: Cargo.toml  README.MD
modules/shared/src/: lib.rs
modules/shared/tests/: simple_rng.rs
modules/test-helpers/: Cargo.toml
modules/test-helpers/src/: lib.rs  plotting.rs  signal.rs
scripts/: build-workers.js  build.js  release-modules.js  shared.js  vite-preserve-url.js
src/: App.tsx  index.ts
src/assets/modules/: clawdio_bitcrusher_bg.wasm
src/components/: Bitcrusher.tsx
src/nodes/: BitcrusherNode.ts
src/store/: audio.ts
src/workers/: bitcrusher.ts
